--- a/src/layout.html
+++ b/src/layout.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>lufei.im</title>
+    <title>Zero</title>
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="static/img/favicon.svg">
   </head>
   <body><section class="layout"></section></body>
 </html>
