--- a/src/layout.html
+++ b/src/layout.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Zero</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="static/img/favicon.svg">
   </head>
