--- a/src/layout.html
+++ b/src/layout.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Zero</title>
+    <meta name="description" content="从未停止对美好事物的探索">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="static/img/favicon.svg">
   </head>
