--- a/src/layout.html
+++ b/src/layout.html
@@ -6,6 +6,7 @@
     <meta name="description" content="从未停止对美好事物的探索">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="static/img/favicon.svg">
   </head>
