--- a/src/layout.html
+++ b/src/layout.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Zero</title>
+    <title>Tiny Image</title>
     <meta name="description" content="从未停止对美好事物的探索">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
